# LUX-Call

./: .gitignore  CMakeLists.txt  README.md  api.cpp  main.cpp  token_api.py
data/: CMakeLists.txt  avatars.json  calls_history.json  chats.json  contacts.json  gen.cpp  logs.json  recent.json  sessions.json  users.json
frontend/: Settings.py  main.py
lux_call/: README.md  main.dart  pubspec.yaml
lux_call/android/app/: build.gradle.kts
lux_call/android/app/src/main/: AndroidManifest.xml
lux_call/android/app/src/main/kotlin/com/example/lux_call/: MainActivity.kt
lux_call/ios/Runner/: Info.plist
lux_call/ios/Runner.xcodeproj/: project.pbxproj
lux_call/lib/: main.dart
lux_call/linux/: CMakeLists.txt
lux_call/linux/runner/: my_application.cc
lux_call/macos/Runner.xcodeproj/: project.pbxproj
lux_call/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lux_call/macos/Runner/Configs/: AppInfo.xcconfig
lux_call/test/: widget_test.dart
lux_call/web/: index.html  manifest.json
lux_call/windows/: CMakeLists.txt
lux_call/windows/runner/: Runner.rc  main.cpp
